@@ -40,23 +40,21 @@ public class ConvertList2ArrayTest {
     }
 
     @Test
-    public void whenListOf2ArraaysThenListOfAllElements() {
+    public void whenListOf2ArraysThenListOfAllElements() {
         ConvertList2Array conversion = new ConvertList2Array();
-        List<int[]> list = new ArrayList<>();
-        list.add(new int[]{1, 2});
-        list.add(new int[]{3, 4, 5, 6});
+        List<int[]> list = List.of(new int[]{1, 2}, new int[]{3, 4, 5, 6});
         List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6);
         assertThat(conversion.convert(list), is(expect));
     }
 
     @Test
-    public void whenListOf3ArraaysThenListOfAllElements() {
+    public void whenListOf3ArraysThenListOfAllElements() {
         ConvertList2Array conversion = new ConvertList2Array();
         List<int[]> list = new ArrayList<>();
         list.add(new int[]{1, 2});
         list.add(new int[]{3, 4, 5, 6});
         list.add(new int[]{7, 8, 9});
-        List<Integer> expect = Arrays.asList(1, 2, 3, 4, 5, 6, 7, 8, 9);
+        List<Integer> expect = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9);
         assertThat(conversion.convert(list), is(expect));
     }
 }
